able to grab just the name of the country and not the whole html block

--- a/client/style.css
+++ b/client/style.css
@@ -2,10 +2,8 @@
 
 #destinationContainer {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
-
+    flex-direction: column;
+    justify-content: center;
     
 }
 
