--- a/client/style.css
+++ b/client/style.css
@@ -1,5 +1,5 @@
 
-
+/* 
 #destinationContainer {
     display: flex;
     flex-direction: column;
@@ -14,4 +14,4 @@
 
 .fade-out {
     opacity: 0;
-}
+} */
