--- a/client/style.css
+++ b/client/style.css
@@ -1,15 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Indie+Flower&family=Satisfy&family=Zeyada&display=swap');
 
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
 body{ 
     display: flex;
     justify-content: center;
     flex-direction: column;
-    background-color: #cbf3f0;
-    
-    
+    background: linear-gradient(to bottom, #cbf3f0,#faedcd);
+    min-height: 100%;
 }
-
-
+    
 h1 {
 
     display: flex;
@@ -21,22 +24,21 @@ h1 {
     -webkit-text-fill-color: transparent;
     font-family: 'Great Vibes';
     
+    
 }
-
-
-
+    
 h1.smaller {
  font-size: 60px; 
+ margin-top: 50px;
 
 }
-
 button {
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 24px;
     border: none;
-    transition: opacity 0.5s ease;
+    transition: opacity 0.7s ease;
     font-family: 'Indie Flower';
     background-color:  #cbf3f0 ;
     background: linear-gradient(to right,#ff5e62, #ff9966, #ff5e62);
@@ -44,10 +46,14 @@ button {
     -webkit-text-fill-color: transparent;
     font-weight: bold;
 }
-
-
+select {
+    font-size: 2vh;
+    background-color: #cbf3f0;
+    border: none;
+}
 
 h2 {
+    text-align:center;
     font-size: 36px;
     font-family: 'Great Vibes';
     color: #023047;
@@ -55,11 +61,19 @@ h2 {
 }
 
 h3 {
+    display: flex;
+    justify-content: center;
+    text-align: center;
     font-size: 30px;
     font-family: 'Great Vibes';
     color: #023047;
 }
 
+p{
+    display: flex;
+    justify-content: center;
+    color: #023047
+}
 
 #destinationContainer {
     display: flex;
@@ -89,3 +103,12 @@ img{
 .visible {
     opacity: 1;
 }
+    
+    
+    
+
+
+
+
+
+
