--- a/client/style.css
+++ b/client/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Indie+Flower&family=Satisfy&family=Zeyada&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 html, body {
     margin: 0;
@@ -77,7 +78,8 @@ h3 {
 p{
     display: flex;
     justify-content: center;
-    color: #023047
+    color: #023047;
+    font-family: 'PT Sans'
 }
 
 #destinationContainer {
@@ -85,16 +87,33 @@ p{
     justify-content: center; 
     align-items: center; 
     flex-direction: column;
-   
 }
 
-img{
-    display: flex;
-    flex-direction: row;
-    height: 470px;
-    width: 750px;
+#cityInfoContainer {
+    
+    max-height: -40%;
+    margin-top: 0%;
    
 }
+   
+ div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+ }  
+
+#attractionInfo{
+    display: flex;
+    justify-content: center;
+    align-items:center;
+}
+ img{
+    
+    height: 470px;
+    width: 650px; 
+   
+} 
 
 .fade-out {
     opacity: 0;
@@ -116,6 +135,7 @@ img{
     opacity: 1;
 }
     
+
     
     
 
